--- a/team.html
+++ b/team.html
@@ -138,12 +138,7 @@
             <div class="team-member">
               <div class="member-img">
                 <img src="assets/img/erp.png" class="img-fluid" alt="">
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter-x"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
+                
               </div>
               <div class="member-info">
                 <h4>ERP Software</h4>
@@ -156,12 +151,12 @@
             <div class="team-member">
               <div class="member-img">
                 <img src="https://img.freepik.com/free-vector/isometric-telemedicine-online-medicine-healthcare-technology-concept_33099-160.jpg?t=st=1741154336~exp=1741157936~hmac=7ee01cccb454c18b200117b3efc0872528f5f359a88f27b485589d5ac5440fc2&w=1060" class="img-fluid" alt="">
-                <div class="social">
+                <!-- <div class="social">
                   <a href=""><i class="bi bi-twitter-x"></i></a>
                   <a href=""><i class="bi bi-facebook"></i></a>
                   <a href=""><i class="bi bi-instagram"></i></a>
                   <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
+                </div> -->
               </div>
               <div class="member-info">
                 <h4>Hospital management</h4>
