`Removed two client logos and readded them at the end of the marquee group`

--- a/index.html
+++ b/index.html
@@ -531,6 +531,7 @@
                 <img src="assets/clientlogo/TRI.jpg" alt="">
                 <img src="assets/clientlogo/WhatsApp Image 2023-06-05 at 13.58.58.jpg" alt="">
                 <img src="assets/clientlogo/ZRI.png" alt="">
+                <img src="assets/clientlogo/ZRI.png" alt="">
               </div>
             </div>
           </div>
