--- a/pricing.html
+++ b/pricing.html
@@ -191,7 +191,7 @@
     </div>
   </div>
 </section><!-- /Pricing Section -->
-<!-- 
+
 <div class="addons">
   <h1>Our Add-On Repository</h1>
   <div class="grid">
@@ -240,7 +240,7 @@
       </div>
   </div>
  
-</div> -->
+</div> 
   <hr>
     
   </main>
