--- a/webapplicationdevlopment.html
+++ b/webapplicationdevlopment.html
@@ -91,11 +91,11 @@
     <!-- Page Title -->
     <div class="page-title accent-background">
       <div class="container d-lg-flex justify-content-between align-items-center">
-        <h1 class="mb-2 mb-lg-0">Premimum Cloud Hosting</h1>
+        <h1 class="mb-2 mb-lg-0">Web Application Devlopment</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Premimum Cloud Hosting</li>
+            <li class="current">Web Application Devlopment</li>
           </ol>
         </nav>
       </div>
@@ -110,25 +110,24 @@
 
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="services-list">
-              <a href="premimumcloudhosting.html" class="active">High Performance</a>
-              <a href="premimumcloudhosting.html">Scalability</a>
-              <a href="#">Security</a>
-              <a href="#">24/7 Support</a>
-              <a href="#">Global Reach</a>
-              <a href="#">User-Friendly Control Panel</a>
+              <a href="webapplicationdevlopment.html" class="active">Custom Web Applications</a>
+              <a href="webapplicationdevlopment.html">Rich User Interface</a>
+              <a href="#">Cloud Integration</a>
+              <a href="#">Security and Privacy</a>
+              <a href="#">Technology Expertise</a>
             </div>
 
-            <h4>Key Features of Our Premimum cloud hosting</h4>
-            <p>BizNWeb Technologies offers premium cloud hosting solutions designed to meet the diverse needs of businesses. Here are some key features and benefits of their premium cloud hosting services</p>
+            <h4>Key Features of Our Web Application Development</h4>
+            <p>BizNWeb Technologies specializes in web application development, offering tailored solutions to meet diverse business needs. Their expertise spans various industries, ensuring robust and scalable applications. Here’s an overview of their web application development services</p>
           </div>
 
           
 
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
             <img src="assets/img/services.jpg" alt="" class="img-fluid services-img" style="margin-top: 1px;  margin-left: 1%; width: 100%;">
-            <h3>Dedicated Support for Premimum cloud hosting</h3>
+            <h3>Web Application Development</h3>
             <p>
-                BizNWeb Technologies offers premium cloud hosting solutions designed to meet the diverse needs of businesses.
+                BizNWeb develops versatile web applications tailored to specific business requirements, such as ERP systems, property management software, and retail solutions.
             </p>
             <!-- <ul>
               <li><i class="bi bi-check-circle"></i> <span>Aut eum totam accusantium voluptatem.</span></li>
@@ -136,18 +135,17 @@
               <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea</span></li>
             </ul> -->
             <p>
-                BizNWeb's cloud hosting is powered by advanced infrastructure, ensuring fast and reliable performance for your websites and applications.
+                Their applications feature dynamic and interactive user interfaces, ensuring compatibility across browsers like Chrome, Firefox, Safari, and more.
             </p>
             <p>
-                Easily scale your resources up or down based on your business needs, ensuring you only pay for what you use.
-            </p>
-            <p>Robust security measures, including firewalls, encryption, and regular backups, to protect your data and ensure business continuity.</p>
-            <p>
-                Data centers located in multiple regions, providing low-latency access to your services from anywhere in the world.
+                They provide cloud-based solutions, enabling seamless migration and hosting for enhanced scalability and accessibility.
             </p>
             <p>
-                Intuitive control panel for easy management of your hosting environment, including resource allocation, monitoring, and more.
+                BizNWeb prioritizes data security, offering applications with advanced privacy measures and secure architecture.    
+            <p>
+                Leveraging technologies like ASP.NET, JavaScript, HTML5, and CSS3, they deliver cutting-edge solutions for modern businesses.
             </p>
+           
           </div>
 
         </div>
@@ -156,95 +154,7 @@
 
     </section><!-- /Service Details Section -->
        <!-- Pricing Section -->
-<section id="pricing" class="pricing section">
-    <div class="container">
-      <div class="row gy-4">
-  
-        <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="100">
-          <div class="pricing-item">
-            <h3>Biz - 1</h3>
-            <p class="description">Affordable and Efficient: Essential billing features for small businesses.</p>
-            <h4><sup>₹</sup>7999<span></span></h4>
-            <a href="#" class="cta-btn">Start a free trial</a>
-            <p class="text-center small">No credit card required</p>
-            <ul>
-              <li><i class="bi bi-check"></i> <span>2 vCPU</span></li>
-            <li><i class="bi bi-check"></i> <span>4 GB Ram</span></li>
-            <li><i class="bi bi-check"></i> <span>50 GB SSD NVMe</span></li>
-            <li><i class="bi bi-check"></i> <span>4 TB Bandwith</span></li>
-            <li><i class="bi bi-check"></i> <span>RDP Acccess</span></li>
-            <li><i class="bi bi-check"></i> <span>1 dedicated IP</span></li>
-            <li><i class="bi bi-check"></i> <span>1 GBPS Network</span></li>
-            <li><i class="bi bi-check"></i> <span>Windows OS</span></li>
-            </ul>
-          </div>
-        </div><!-- End Pricing Item -->
-  
-        <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="200">
-          <div class="pricing-item featured">
-            <p class="popular">Popular</p>
-            <h3>Biz - 2</h3>
-            <p class="description">Enhanced Functionality: Advanced features including expense tracking.</p>
-            <h4><sup>₹</sup>17999<span></span></h4>
-            <a href="#" class="cta-btn">Start a free trial</a>
-            <p class="text-center small">No credit card required</p>
-            <ul>
-              <li><i class="bi bi-check"></i> <span>2 vCPU</span></li>
-              <li><i class="bi bi-check"></i> <span>8 GB Ram</span></li>
-              <li><i class="bi bi-check"></i> <span>100 GB SSD NVMe</span></li>
-              <li><i class="bi bi-check"></i> <span>8 TB Bandwith</span></li>
-              <li><i class="bi bi-check"></i> <span>RDP Acccess</span></li>
-              <li><i class="bi bi-check"></i> <span>1 dedicated IP</span></li>
-              <li><i class="bi bi-check"></i> <span>1 GBPS Network</span></li>
-              <li><i class="bi bi-check"></i> <span>Windows OS</span></li>
-            </ul>
-          </div>
-        </div><!-- End Pricing Item -->
-  
-        <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="300">
-          <div class="pricing-item">
-            <h3>Biz - 3</h3>
-            <p class="description">Comprehensive and Powerful: Full suite of billing features with real-time reporting.</p>
-            <h4><sup>₹</sup>27999<span></span></h4>
-            <a href="#" class="cta-btn">Start a free trial</a>
-            <p class="text-center small">No credit card required</p>
-            <ul>
-              <li><i class="bi bi-check"></i> <span>4 vCPU</span></li>
-            <li><i class="bi bi-check"></i> <span>16 GB Ram</span></li>
-            <li><i class="bi bi-check"></i> <span>200 GB SSD NVMe</span></li>
-            <li><i class="bi bi-check"></i> <span>16 TB Bandwith</span></li>
-            <li><i class="bi bi-check"></i> <span>RDP Acccess</span></li>
-            <li><i class="bi bi-check"></i> <span>1 dedicated IP</span></li>
-            <li><i class="bi bi-check"></i> <span>1 GBPS Network</span></li>
-            <li><i class="bi bi-check"></i> <span>Windows OS</span></li>
-          </ul>
-            </ul>
-          </div>
-        </div><!-- End Pricing Item -->
-  
-        <div class="col-lg-3 col-md-6" data-aos="zoom-in" data-aos-delay="400">
-          <div class="pricing-item">
-            <h3>Biz - 4</h3>
-            <p class="description">Tailored to Your Needs: Configure features to match your unique business requirements.</p>
-            <a href="#" class="cta-btn">Get in touch</a>
-            <p class="text-center small">No credit card required</p>
-            <ul>
-              <li><i class="bi bi-check"></i> <span>8 vCPU</span></li>
-            <li><i class="bi bi-check"></i> <span>32 GB Ram</span></li>
-            <li><i class="bi bi-check"></i> <span>400 GB SSD NVMe</span></li>
-            <li><i class="bi bi-check"></i> <span>32 TB Bandwith</span></li>
-            <li><i class="bi bi-check"></i> <span>RDP Acccess</span></li>
-            <li><i class="bi bi-check"></i> <span>1 dedicated IP</span></li>
-            <li><i class="bi bi-check"></i> <span>1 GBPS Network</span></li>
-            <li><i class="bi bi-check"></i> <span>Windows OS</span></li>
-            </ul>
-          </div>
-        </div><!-- End Pricing Item -->
-  
-      </div>
-    </div>
-  </section><!-- /Pricing Section -->
-  
+
 
   </main>
 
@@ -257,17 +167,19 @@
             <span class="sitename">Company</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
+            <p>S-1, Second Floor, Sky Tower Apartment, Opp. BSNL Telephopne Exchange
+              Royal Market, Bhopal
+              M.P. 462001</p>
+            <!-- <p>New York, NY 535022</p> -->
+            <p class="mt-3"><strong>Phone:</strong> <span> +91- 998 -121 -1145</span></p>
+            <p><strong>Email:</strong> <span>info@biznweb.com</span></p>
           </div>
           <div class="social-links d-flex mt-4">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
+            <a href="https://x.com/intent/follow?original_referer=https%3A%2F%2Fwww.biznweb.com%2F&ref_src=twsrc%5Etfw%7Ctwcamp%5Ebuttonembed%7Ctwterm%5Efollow%7Ctwgr%5EBiznwebTech&screen_name=BiznwebTech"><i class="bi bi-twitter-x"></i></a>
             <a href=""><i class="bi bi-facebook"></i></a>
             <a href=""><i class="bi bi-instagram"></i></a>
             <a href=""><i class="bi bi-linkedin"></i></a>
-          </div>
+          </div> 
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
