--- a/team.html
+++ b/team.html
@@ -50,28 +50,31 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li class="dropdown"><a href="about.html"><span>About</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="team.html">Softwares</a></li>
+          <li class="dropdown"><a href="#"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
-              <li><a href="team.html" class="active">Softwares</a></li>
-              <!-- <li><a href="testimonials.html">Testimonials</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+              <li><a href="gstbillingsoftware.html">GST billing Softwares</a></li>
+              <li><a href="customisebillingsoftware.html">Customise billing software</a></li>
+              <li class="dropdown"><a href="#"><span>Development</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
-                  <li><a href="#">Deep Dropdown 2</a></li>
-                  <li><a href="#">Deep Dropdown 3</a></li>
-                  <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
+                  <li><a href="mobileapplicationdevelopment.html">Mobile Application Development</a></li>
+                  <li><a href="webapplicationdevlopment.html">Web Application Development</a></li></ul>
+              </li>
+              <li class="dropdown"><a href="#"><span>Hosting</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+                <ul>
+                  
+                  <li><a href="premimumcloudhosting.html">Premium Cloud Hosting</a></li>
+                  <li><a href="domainregistration.html">Domain Hosting</a></li>
+                  
                 </ul>
-              </li> -->
+              </li>
             </ul>
           </li>
-          <li><a href="services.html">Services</a></li>
-          <!-- <li><a href="portfolio.html">Portfolio</a></li> -->
           <li><a href="pricing.html">Pricing</a></li>
-          <!-- <li><a href="blog.html">Blog</a></li> -->
           <li><a href="contact.html">Contact</a></li>
-          <li><a href="register.html">Register</a></li>
+          <li class="register"><a href="register.html">Register</a></li>
+          <li><a href="about.html">About</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
