picture changes done

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </div><!-- End Carousel Item -->
 
         <div class="carousel-item">
-          <img src="https://img.freepik.com/free-vector/gradient-erp-illustration_23-2149373210.jpg?t=st=1741173130~exp=1741176730~hmac=b13b3e33c1a7e1335e11a12800ffd6c2deb51fb81a865221bc214a191b013f3a&w=1800" alt="">
+          <img src="assets/img/Gemini_Generated_Image_64t8yc64t8yc64t8.jpg" alt="">
           <div class="container">
             <h2>ERP Software</h2>
             <p>Integrated solutions to manage and optimize various business processes such as finance, supply chain, human resources, and customer relationship management.</p>
@@ -117,7 +117,7 @@
         </div><!-- End Carousel Item -->
 
         <div class="carousel-item">
-          <img src="https://img.freepik.com/free-photo/closeup-hands-using-computer-laptop-with-screen-showing-analysis-data_53876-23014.jpg?t=st=1741173241~exp=1741176841~hmac=d4e953330bfc001d27d64042a574888e95ccbafabb69db6f976cb008f728150b&w=1800" alt="">
+          <img src="assets/img/Gemini_Generated_Image_vl85fpvl85fpvl85.jpg" alt="">
           <div class="container">
             <h2>Billing Software</h2>
             <p>Automated invoicing and billing systems that simplify financial management and improve cash flow.</p>
@@ -126,7 +126,7 @@
         </div><!-- End Carousel Item -->
 
         <div class="carousel-item">
-          <img src="https://img.freepik.com/premium-photo/digital-representation-pie-chart-against-mature-students-with-teacher-laptop-library_1134-70747.jpg?w=1800" alt="">
+          <img src="assets/img/Gemini_Generated_Image_oy38ckoy38ckoy38.jpg" alt="">
           <div class="container">
             <h2>College management software</h2>
             <p>Automated invoicing and billing systems that simplify financial management and improve cash flow.</p>
