plasn and videos

--- a/domainregistration.html
+++ b/domainregistration.html
@@ -118,6 +118,8 @@
               <a href="#">Domain Management Tools</a>
               <a href="#">Secure and Reliable</a>
               <a href="#">Additional Services</a>
+              <a href="https://biznweb.supersite2.myorderbox.com/" target="_blank">View plans</a>
+
             </div>
 
             <h4>Key Features of Domain Registration</h4>
