--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           </div>
           <div class="watch-video d-flex align-items-center position-relative">
             <i class="bi bi-play-circle"></i>
-            <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox stretched-link">Watch Video</a>
+            <a href="https://www.youtube.com/watch?v=pMqHs_Es8NA" class="glightbox stretched-link">Watch Video</a>
           </div>
         </div>
         <div class="row position-relative">
@@ -215,7 +215,7 @@
           </div>
           <div class="watch-video d-flex align-items-center position-relative">
             <i class="bi bi-play-circle"></i>
-            <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox stretched-link">Watch Video</a>
+            <a href="https://youtu.be/I34nZQmzGyE?si=_h4ubDEtfZajHOwQ" class="glightbox stretched-link">Watch Video</a>
           </div>
         </div>
         <div class="row position-relative">
@@ -252,7 +252,7 @@
           </div>
           <div class="watch-video d-flex align-items-center position-relative">
             <i class="bi bi-play-circle"></i>
-            <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox stretched-link">Watch Video</a>
+            <a href="https://youtu.be/MRFz5JJAvgY?si=vp8FubrBlq-8dFET" class="glightbox stretched-link">Watch Video</a>
           </div>
         </div>
       </div>
