--- a/team.html
+++ b/team.html
@@ -127,12 +127,12 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="team-member">
               <div class="member-img">
-                <img src="https://img.freepik.com/free-vector/desktop-smartphone-app-development_23-2148683810.jpg?t=st=1741154243~exp=1741157843~hmac=1083958d4bd1f8200ea4fae8dbcfefba57c259948c1a7dcd702ad98d147fe865&w=1060" class="img-fluid" alt="">
+                <img src="https://img.freepik.com/free-vector/hand-drawn-flat-design-erp-illustration_23-2149387394.jpg?t=st=1741865268~exp=1741868868~hmac=0ec83f1e7d533ab538c0f8d7fe3d6182edabd0b731ea4edce88a4578c25b063c&w=1060" class="img-fluid" alt="">
                 
               </div>
               <div class="member-info">
-                <h4>Software development</h4>
-                <span>Custom Software development</span>
+                <h4>MLM Software </h4>
+                <span>MLM (Multi-Level Marketing) software solutions</span>
               </div>
             </div>
           </div><!-- End Team Member -->
