--- a/premimumcloudhosting.html
+++ b/premimumcloudhosting.html
@@ -128,7 +128,7 @@
           
 
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
-            <img src="assets/img/services.jpg" alt="" class="img-fluid services-img" style="margin-top: 1px;  margin-left: 1%; width: 100%;">
+            <img src="assets/img/Gemini_Generated_Image_x37vp0x37vp0x37v.jpg" alt="" class="img-fluid services-img" style="margin-top: 1px;  margin-left: 1%; width: 100%;">
             <h3>Dedicated Support for Premimum cloud hosting</h3>
             <p>
                 BizNWeb Technologies offers premium cloud hosting solutions designed to meet the diverse needs of businesses.
