all changes done

--- a/freeupdateslifetime.html
+++ b/freeupdateslifetime.html
@@ -65,7 +65,7 @@
                     <ul>
                       
                       <li><a href="premimumcloudhosting.html">Premium Cloud Hosting</a></li>
-                      <li><a href="domainregistration.html">Domain Hosting</a></li>
+                      <li><a href="domainregistration.html">Domain Registration</a></li>
                       
                     </ul>
                   </li>
