--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <ul>
                   
                   <li><a href="premimumcloudhosting.html">Premium Cloud Hosting</a></li>
-                  <li><a href="domainregistration.html">Domain Hosting</a></li>
+                  <li><a href="domainregistration.html">Domain Registration</a></li>
                   
                 </ul>
               </li>
