--- a/pricing.html
+++ b/pricing.html
@@ -104,8 +104,21 @@
       </div>
     </div><!-- End Page Title -->
 
+    <div class="destip">
+      <hr class="first-hr">
+      <h2 style="color: aquamarine;">Find the perfect match for</h2>
+      <h2> your business needs !</h2>
+      <hr class="second-hr">
+      <div class="features">
+        <span class="feature">&#x2611; No hidden charges</span>
+        <span class="feature">&#x2611; Straightforward charges</span>
+        <span class="feature">&#x2611; Cancel anytime</span>
+      </div>
+      
+    </div>
     <!-- Pricing Section -->
 <section id="pricing" class="pricing section">
+  
   <div class="container">
     <div class="row gy-4">
 
@@ -339,6 +352,7 @@
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script src="script.js"></script>
 
 </body>
 
