--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
           <li class="dropdown"><a href="team.html"><span>Softwares</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="hotelmanagesoft.html">Restaurant Management Software</a></li>
-              <!-- <li><a href="customisebillingsoftware.html">Customise billing software</a></li> -->
+              <li><a href="fessmanagement.html">Fees management Software</a></li>
+              <li><a href="gstsoftware.html">GST Billing Software</a></li>
             </ul>
           </li>
           <li class="dropdown"><a href="#"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
