--- a/index.html
+++ b/index.html
@@ -154,7 +154,10 @@
 
       
     </section><!-- /Hero Section -->
-
+    <a href="https://wa.me/9111380047?text=Hello!%20I%20am%20interested%20in%20your%20services." target="_blank" style="position: fixed; bottom: 80px; right: 20px; z-index: 1000;">
+      <img src="https://img.freepik.com/premium-vector/circle-whatsapp-logotype-icon-social-media-app-network-application-popular-editorial-brand-vector-illustration_913857-391.jpg?w=826" alt="Chat on WhatsApp" style="width: 50px; height: 50px;">
+  </a>
+  
     <!-- About Section -->
     <section id="about" class="about section">
       <div class="container">
