--- a/freeupdateslifetime.html
+++ b/freeupdateslifetime.html
@@ -51,7 +51,13 @@
           <nav id="navmenu" class="navmenu">
             <ul>
               <li><a href="index.html" class="active">Home</a></li>
-              <li><a href="team.html">Softwares</a></li>
+              <li class="dropdown"><a href="team.html"><span>Softwares</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+                <ul>
+                  <li><a href="hotelmanagesoft.html">Restaurant Management Software</a></li>
+                  <li><a href="fessmanagement.html">Fees management Software</a></li>
+                  <li><a href="gstsoftware.html">GST Billing Software</a></li>
+                </ul>
+              </li>
               <li class="dropdown"><a href="#"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                 <ul>
                   <li><a href="gstbillingsoftware.html">GST billing Softwares</a></li>
